@@ -125,32 +125,30 @@ like $fail, qr/Oops!/, 'right error';
 is $collection->remove, 1, 'one document removed';
 
 # Fork safety
-my $result;
-$fail = undef;
-$collection->find->count(
-  sub {
-    my ($collection, $err, $num) = @_;
-    $fail   = $err;
-    $result = $num;
-    Mojo::IOLoop->stop;
+$mango      = Mango->new($ENV{TEST_ONLINE});
+$collection = $mango->db->collection('connection_test');
+my ($connections, $current);
+$mango->on(
+  connection => sub {
+    my ($mango, $id) = @_;
+    $connections++;
+    $current = $id;
   }
 );
-Mojo::IOLoop->start;
-ok !$fail, 'no error';
-is $result, 0, 'no documents';
-$fail = undef;
-$collection->find->count(
-  sub {
-    my ($collection, $err, $num) = @_;
-    $fail   = $err;
-    $result = $num;
-  }
-);
+is $collection->find->count, 0, 'no documents';
+is $connections, 1, 'one connection';
+ok $mango->ioloop->stream($current), 'connection exists';
+my $first = $current;
+is $collection->find->count, 0, 'no documents';
+is $connections, 1, 'one connection';
+ok $mango->ioloop->stream($current), 'connection exists';
+is $first, $current, 'same connection';
 {
   local $$ = -23;
   is $collection->find->count, 0, 'no documents';
-  like $fail, qr/Premature connection close/, 'right error';
-  is $result, undef, 'no result';
+  is $connections, 2, 'two connections';
+  ok $mango->ioloop->stream($current), 'connection exists';
+  isnt $first, $current, 'different connections';
 }
 
 # Mixed parallel operations
