@@ -1,5 +1,6 @@
 
 0.09  2013-07-26
+  - Added connection event to Mango.
   - Improved connection management to be fork-safe.
 
 0.08  2013-07-20
